--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "mailgun.js": "^12.0.3",
     "mongoose": "^8.16.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "node-cron": "^3.0.3"
   },
   "engines": {
     "node": ">=18.0.0"
